--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1 style="color:#444"></h1>
-<p style="font-size:78px">Elle va se taire oui ?</p>
+<h1 style="color:#444">Bonjour à tous</h1>
+<p style="font-size:18px">Coding night</p>
+<h2>Testing !</h2>
